--- a/responsive_web_design/product_landing_page/style.css
+++ b/responsive_web_design/product_landing_page/style.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #fafafa;
+    font-family: 'Lato', sans-serif
 }
 
 #header-img {
@@ -13,13 +15,14 @@ body {
 
 .logo {
     margin: 0;
-    padding: 0;
+    padding: 20px;
     display: inline-block;
 }
 
 #nav-bar {
-    margin: 0;
-    padding: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 10px;
     float: right;
 }
 
@@ -30,10 +33,25 @@ body {
 
 nav>ul {
     width: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .nav-link {
     text-decoration: none;
     color: black;
-    font-size: 22px;
+    font-size: 20px;
+}
+
+.container {
+    text-align: center;
+}
+
+.desc {
+    padding: 20px;
+}
+
+#product-video {
+    padding-top: 20px;
 }
