--- a/responsive_web_design/product_landing_page/style.css
+++ b/responsive_web_design/product_landing_page/style.css
@@ -6,6 +6,10 @@ body {
     font-family: 'Lato', sans-serif
 }
 
+h2 {
+    font-weight: 80%;
+}
+
 #header-img {
     width: 100%;
     height: 100%;
@@ -49,9 +53,46 @@ nav>ul {
 }
 
 .desc {
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 #product-video {
     padding-top: 20px;
+}
+
+input[type="email"] {
+    padding: 5px;
+    width: 100%;
+    max-width: 275px;
+    margin: 5px;
+}
+
+input[type="submit"] {
+    padding: 5px;
+    margin: 10px;
+    width: 100%;
+    max-width: 130px;
+    border: none;
+    background-color: gold;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+input[type="submit"]:hover {
+    background-color: orange;
+    transition-duration: 1000ms;
+    cursor: pointer;
+}
+
+.content {
+    margin-top: 60px;
+}
+
+.icon {
+    display: inline;
+    margin: 15px;
+    padding: 10px;
+    color: darkorange;
 }
