--- a/responsive_web_design/product_landing_page/style.css
+++ b/responsive_web_design/product_landing_page/style.css
@@ -10,6 +10,17 @@ h2 {
     font-weight: 80%;
 }
 
+#header {
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0px 20px;
+    background-color: #fafafa;
+    width: 100%;
+}
+
 #header-img {
     width: 100%;
     height: 100%;
@@ -36,7 +47,7 @@ h2 {
 }
 
 nav>ul {
-    width: 300px;
+    width: 35vw;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -54,6 +65,7 @@ nav>ul {
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin-top: 80px;
 }
 
 .desc {
@@ -119,8 +131,27 @@ input[type="submit"]:hover {
 
 #page-wrapper {
     position: relative;
+    display: block;
 }
 
 .grid {
     display: flex;
+}
+
+@media (max-width: 800px) {
+    nav>ul {
+        width: 35vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .container {
+        margin-top: 200px;
+    }
 }
