--- a/responsive_web_design/product_landing_page/style.css
+++ b/responsive_web_design/product_landing_page/style.css
@@ -19,13 +19,13 @@ h2 {
     padding: 0px 20px;
     background-color: #fafafa;
     width: 100%;
+    z-index: 1000;
 }
 
 #header-img {
     width: 100%;
     height: 100%;
     max-width: 150px;
-    margin-left: 50px;
 }
 
 .logo {
