--- a/responsive_web_design/technical_documentation_page/style.css
+++ b/responsive_web_design/technical_documentation_page/style.css
@@ -5,10 +5,15 @@ body {
     box-sizing: border-box;
 }
 
+#main-doc {
+    margin-left: 300px;
+    position: absolute;
+}
+
 .main-section {
     margin: 10px 10px;
-    border: solid 1px black;
-    overflow: hidden;
+    padding-left: 5px;
+    padding-bottom: 20px;
 }
 
 header {
@@ -17,6 +22,7 @@ header {
     font-size: 25px;
     margin-top: 15px;
     margin-bottom: 15px;
+    padding-left: 20px;
 }
 
 code {
@@ -25,4 +31,39 @@ code {
     border-radius: 5%;
     margin: 10px 10px 10px 10px;
     width: 100%;
+}
+
+nav {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 300px;
+    min-width: 290px;
+    height: 100%;
+    border-right: 1px solid black;
+}
+
+.nav-link {
+    display: block;
+    margin-bottom: -1px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    text-decoration: none;
+    color: black;
+    border-top: 1px solid black;
+}
+
+@media only screen and (max-width: 800px) {
+    nav {
+        position: absolute;
+        width: 100%;
+        max-height: 200px;
+        overflow: scroll;
+    }
+    #main-doc {
+        margin-top: 300px;
+        margin-left: 0px;
+        position: relative;
+    }
 }
