--- a/responsive_web_design/personal_portfolio/style.css
+++ b/responsive_web_design/personal_portfolio/style.css
@@ -18,6 +18,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 9999;
 }
 
 #navbar ul {
@@ -35,7 +36,6 @@ body {
 #navbar a {
     text-decoration: none;
     color: #2bbc8a;
-    padding: 5px;
 }
 
 #navbar a:hover {
@@ -45,11 +45,15 @@ body {
 
 #welcome-section {
     text-align: center;
-    margin-top: 50px;
     width: 100%;
-    padding-top: 5px;
     padding-bottom: 5px;
     height: 100vh;
+    padding: 0;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
 }
 
 #projects {
@@ -63,6 +67,16 @@ body {
     margin: 10px 5px 10px 5px;
     min-width: 30%;
     height: 250px;
+}
+
+#pepe {
+    text-align: center;
+    margin-left: 200px;
+    margin-right: auto;
+}
+
+a {
+    color: #2bbc8a;
 }
 
 @media only screen and (max-width: 600px) {
